chore: Maintenance - Remove Lombok from the project - Migrate to JSpecify - Fix some typos
{major}

Signed-off-by: Esta Nagy <nagyesta@gmail.com>